Add prettier styling to page elements

--- a/style.css
+++ b/style.css
@@ -1,20 +1,30 @@
-div {
-	/*border: 2px solid green;*/
+body {
+	background-color: #333
 }
 
 #stage {
 	height: 400px;
 	width: 400px;
-	margin: auto;
+	margin: 50px auto 0 auto;
 	overflow: hidden;
 	position: relative;
+}
+
+#stage-shadow {
+	height: 100%;
+	width: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	box-shadow: 0 10px 10px -10px #eee inset,
+				0 -10px 10px -10px #eee inset;
 }
 
 #photostrip {
 	height: 400px;
 	width: 2000px;
 	position: relative;
-	left: -400px;
+	left: 0;
 }
 
 table {
@@ -35,6 +45,8 @@ img {
 	display: block;
 	margin: auto;
 }
+
+/* ARROW BUTTONS */
 
 .arrow {
 	width: 20px;
@@ -75,22 +87,24 @@ img {
 	background-color: rgba(200,200,200,.9)
 }
 
+/* QUICK NAV */
+
 #quick-jump {
 	display: inline-block;
+	margin-top: 10px;
 	border: none;
 	padding: 4px 0 0 0;
 }
 
 .quick-button {
-	border-radius: 16px;
-	height: 16px;
-	width: 16px;
+	border-radius: 20px;
+	height: 20px;
+	width: 20px;
 	display: inline-block;
 	margin: 0 2px;
-	border: 2px solid blue;
-	background-color: rgba(180,180,255,.35)
+	box-shadow: 1px 1px 1px 1px #eee inset, -1px -1px 1px 1px #555 inset;
+	background-color: rgba(255,255,255,.45)
 }
-
 
 /* UTILITIES */
 
