--- a/style.css
+++ b/style.css
@@ -106,6 +106,10 @@ img {
 	background-color: rgba(255,255,255,.45)
 }
 
+.selected-button {
+	background-color: rgba(255,255,255,.85);
+}
+
 /* UTILITIES */
 
 .centering-wrapper {
